<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_medication_list"
            android:icon="@drawable/ic_list_black_24dp"
            android:title="@string/menu_medication_list" />

        <item
            android:id="@+id/nav_baza_group"
            android:icon="@drawable/ic_database_black_24dp"
            android:title="@string/menu_baza_nav">
            <menu>
                <item
                    android:id="@+id/nav_baza_leki_screen"
                    android:title="@string/menu_baza_leki" />
                <item
                    android:id="@+id/nav_baza_apteki_screen"
                    android:title="@string/menu_baza_apteki" />
            </menu>
        </item>

        <item
            android:id="@+id/nav_alerty_group"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/menu_alerty_nav">
            <menu>
                <item
                    android:id="@+id/nav_alerty_lista_screen"
                    android:title="@string/menu_alerty_lista" />
                <item
                    android:id="@+id/nav_alerty_przypomnienia_screen"
                    android:title="@string/menu_alerty_przypomnienia" />
            </menu>
        </item>

        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/avatar_1"
            android:title="@string/menu_account" />
    </group>
</menu>
