<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <AutoCompleteTextView
        android:id="@+id/edit_text_medication_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/medication_name_hint"
        android:imeOptions="actionNext"
        android:inputType="textCapSentences" />

    <EditText
        android:id="@+id/edit_text_medication_strength"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/medication_strength_hint"
        android:imeOptions="actionNext"
        android:inputType="textCapSentences" />

    <EditText
        android:id="@+id/edit_text_medication_package_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/medication_package_size_hint"
        android:imeOptions="actionNext"
        android:inputType="textCapSentences" />

    <EditText
        android:id="@+id/edit_text_medication_substance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/medication_substance_hint"
        android:imeOptions="actionNext"
        android:inputType="textCapSentences" />

    <AutoCompleteTextView
        android:id="@+id/edit_text_medication_unit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/medication_unit_hint"
        android:imeOptions="actionNext"
        android:inputType="textCapSentences" />

    <EditText
        android:id="@+id/edit_text_medication_current_stock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/medication_current_stock_hint"
        android:imeOptions="actionNext"
        android:inputType="number" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edit_text_medication_dosage_morning"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/medication_dosage_morning_hint"
            android:imeOptions="actionNext"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/edit_text_medication_dosage_noon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:hint="@string/medication_dosage_noon_hint"
            android:imeOptions="actionNext"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/edit_text_medication_dosage_evening"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:hint="@string/medication_dosage_evening_hint"
            android:imeOptions="actionNext"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <EditText
        android:id="@+id/edit_text_medication_alert_days"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/medication_alert_days_hint"
        android:imeOptions="actionDone"
        android:inputType="number" />

    <Button
        android:id="@+id/button_save_medication"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/medication_editor_add" />

    <Button
        android:id="@+id/button_delete_medication"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/medication_editor_delete" />

</LinearLayout>
