<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_transform">

    <fragment
        android:id="@+id/nav_transform"
        android:name="pl.syntaxdevteam.medstock.ui.transform.TransformFragment"
        android:label="@string/menu_transform"
        tools:layout="@layout/fragment_transform" />

    <fragment
        android:id="@+id/nav_baza_leki_screen"
        android:name="pl.syntaxdevteam.medstock.ui.baza.medications.MedicationCatalogFragment"
        android:label="@string/menu_baza"
        tools:layout="@layout/fragment_medication_catalog" />

    <fragment
        android:id="@+id/nav_baza_apteki_screen"
        android:name="pl.syntaxdevteam.medstock.ui.baza.pharmacy.PharmacyCatalogFragment"
        android:label="@string/menu_baza"
        tools:layout="@layout/fragment_pharmacy_catalog" />

    <fragment
        android:id="@+id/nav_alerty_lista_screen"
        android:name="pl.syntaxdevteam.medstock.ui.alerty.alerts.AlertsListFragment"
        android:label="@string/menu_alerty"
        tools:layout="@layout/fragment_alerts_list" />


    <fragment
        android:id="@+id/nav_alerty_przypomnienia_screen"
        android:name="pl.syntaxdevteam.medstock.ui.alerty.reminders.RemindersListFragment"
        android:label="@string/menu_alerty"
        tools:layout="@layout/fragment_reminders_list" />


    <fragment
        android:id="@+id/nav_medication_editor"
        android:name="pl.syntaxdevteam.medstock.ui.transform.MedicationEditorFragment"
        android:label="@string/medication_editor_title"
        tools:layout="@layout/fragment_medication_editor" />

    <fragment
        android:id="@+id/nav_account"
        android:name="pl.syntaxdevteam.medstock.ui.settings.SettingsFragment"
        android:label="@string/menu_account"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="pl.syntaxdevteam.medstock.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>
